--- a/streamlit-app/requirements.txt
+++ b/streamlit-app/requirements.txt
@@ -11,6 +11,9 @@ langchain-ollama>=0.1.0
 # MCP SDK for connecting to MCP servers
 mcp>=0.9.0
 
+# BioMCP for biomedical research tools
+biomcp-python>=0.7.0
+
 # HTTP client for MCP
 httpx>=0.25.0
 
